# insighta-web

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  dependencies.py  http.py  main.py
app/routes/: auth.py  profiles.py
app/templates/: account.html  base.html  dashboard.html  login.html
app/templates/profiles/: create.html  detail.html  list.html  search.html
static/: style.css
tests/: conftest.py  test_routes.py
