[project]
name = "insighta-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "uvicorn>=0.46.0",
]


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
"tests",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
